recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:7: error: value asInstance is not a member of Int
		avance(length.asInstance[Int])
                              ^